<resources>
    <string name="app_name">JoJack</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enter_button">Registration / Login</string>
    <string name="welcome">Welcome Home!</string>
    <string name="going_on">What is going on? Who are we?</string>
    <string name="no_internet">No internet connection!</string>
    <string name="title_activity_main_app">MainApp</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="message">Messenger</string>
    <string name="account">Account</string>
    <string name="job">Job: </string>
    <string name="CK">Central Committee</string>
    <string name="jojack">JoJack</string>
    <string name="ID">ID: </string>
    <string name="terminal">Terminal</string>
    <string name="appeal">Appeal to the Central Com.</string>
    <string name="change_password">Change password</string>
    <string name="theme">Theme</string>
    <string name="exit">Exit</string>
    <string name="title_activity_terminal">Terminal</string>
    <string name="error_enter">Login busy or password error</string>
    <string name="error">Something went wrong...</string>
    <integer name="com_vk_sdk_AppId">51833987</integer>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="register">Register</string>
    <string name="enter">Enter</string>
    <string name="to_enter">Already have an account? Sign in.</string>
    <string name="to_register">No account? Sign up.</string>
    <string name="no_account">No account?</string>
    <string name="exists_account">Already have an account?</string>
    <string name="reg">Sign up</string>
    <string name="log">Sign in</string>
    <string name="empty_fields">Input fields cannot be empty.</string>
    <string name="meeting">Meeting</string>
    <string name="settings">Settings</string>
    <string name="user_exists">The user already exists!</string>
    <string name="nf">User not found!</string>
    <string name="pl">Invalid password or login!</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_password">Enter password</string>
    <string name="message1">Message</string>
    <string name="blocked_user">Blocked user</string>
    <string name="user">JoJack</string>
    <string name="author">Author</string>
    <string name="moderator">Moderator</string>
    <string name="editor">Editor</string>
    <string name="admin">Admin</string>
    <string name="ck_user">Representative of the Central Committee</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="start_search">Start your search here</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_appeal">Enter the text of the appeal</string>
    <string name="send_appeal">Send the appeal</string>
    <string name="title_activity_messenger_post">MessengerPostActivity</string>
    <string name="comments">Comments</string>
    <string name="search_user">User search by id or login</string>
    <string name="group">Group?</string>
    <string name="enable_encrypt">Enable encryption?</string>
    <string name="not_yet">There\'s just a little bit left.... Some permissions are required for the application to work properly.</string>
    <string name="yet">Provide permissions</string>
    <string name="no_permissions">Continue without permissions (not recommended)</string>
    <string name="no_internet2">It looks like your device is not connected to the internet. Check the connection or try again later...</string>
    <string name="try_again">Try again</string>
    <string name="write_something">What\'s new?</string>
    <string name="publish">Publish</string>
    <string name="title_activity_chat2">Chat2</string>
    <string name="dont_disturb">Don\'t disturb.</string>
    <string name="dont_disturb_common">Standard users will not be able to write to you.</string>
    <string name="reply">Reply</string>
    <string name="my_opinion">My opinion is...</string>
    <string name="title_activity_post_to_messenger">PostToMessenger</string>
    <string name="invalid_input">Invalid input</string>
    <string name="no_permission">You do not have access to the terminal. Not enough rights!</string>
    <string name="access_is_allowed">Access is allowed</string>
    <string name="unread">Messages unread</string>
    <string name="read">Messages read</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="passwords_eq">Password are equal</string>
    <string name="title_activity_chat3">Chat3</string>
    <string name="copy_invite">Copy the invitation link</string>
    <string name="delete_chat">Delete chat</string>
    <string name="u_in_bl">You are in blacklist!</string>
    <string name="error_in_get_image">Error while acquiring an image</string>
    <string name="no_data">Data is confidential or there was an error in receiving it</string>
    <string name="invite_url">Url-token: </string>
    <string name="unknown_action">Unknown action</string>
</resources>