<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_animation"
    android:id="@+id/layout"
    tools:context=".MainActivity"
    android:orientation="vertical">
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:foregroundGravity="center"/>

        </LinearLayout>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/logo"
            android:foregroundGravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/jojacks_fixed_optimized"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_vertical|center_horizontal"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:maxLines="1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:padding="5dip"
                android:layout_gravity="center"
                android:id="@+id/login"
                android:hint="@string/login"
                android:textSize="20sp"
                android:background="@drawable/round_edit_text"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/password"
                android:padding="5dip"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:id="@+id/password"
                android:background="@drawable/round_edit_text"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enter"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:minWidth="300dp"
                android:text="@string/enter_button"/>

        </LinearLayout>

    </FrameLayout>
    <TextView
        android:id="@+id/about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        android:autoLink="web"
        android:gravity="center|bottom"
        android:linksClickable="true"
        android:text="@string/going_on" />

</LinearLayout>